@@ -1,3 +1,8 @@
+08-12-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added enforcePid property
+	* Added hook for preprocessing uid list before delete
+
 08-12-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Added hooks for preprocessing records before insert and update
